# JetRust

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
src/: element.rs  handlers.rs  main.rs  routes.rs  test_tailwind.rs
src/client/: Trunk.toml  cargo.toml  index.html
src/client/src/: lib.rs
static/css/: output.css
static/wasm/: index.html
