[package]
name = "JetRust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
lazy_static = "1.5.0"
rayon = "1.10.0"
regex = "1.11.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokyo = "1.0.0"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.16.0", features = ["v4"] }
